WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284598
RenderText returns incorrect value for isHorizontalWritingMode() when nested in a vertical block container
https://bugs.webkit.org/show_bug.cgi?id=284598
Summary
RenderText returns incorrect value for isHorizontalWritingMode() when nested ...
alan
Reported
2024-12-12 17:06:24 PST
ssia
Attachments
[fast-cq]Patch
(1.46 KB, patch)
2024-12-12 17:13 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-12-12 17:13:33 PST
Created
attachment 473557
[details]
[fast-cq]Patch
EWS
Comment 2
2024-12-16 05:38:19 PST
Committed
287877@main
(149b496a6656): <
https://commits.webkit.org/287877@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 473557
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-12-16 05:39:15 PST
<
rdar://problem/141543326
>
alan
Comment 4
2025-01-08 16:54:36 PST
***
Bug 284487
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug