RenderText returns incorrect value for isHorizontalWritingMode() when nested in a vertical block container https://bugs.webkit.org/show_bug.cgi?id=284598

Reviewed by Antti Koivisto.

This is caused by caching computed style values on RenderObject while RenderObject does
not have style (RenderElements do). RenderText consults its parent for computed style.

* Source/WebCore/rendering/RenderText.cpp:
(WebCore::RenderText::styleDidChange): We can either update the value here or simply
delete the function from RenderText. Only TextDecorationPainter calls this on a
non-RenderElement renderer -we could simply consult the parent or check the style.

Canonical link: https://commits.webkit.org/287877@main